@@ -1,0 +1,1 @@
+INSERT INTO `rule_values` (`ruleset_id`, `rule_name`, `rule_value`, `notes`) VALUES (1, 'Pets:TargetableSwarmPet', 'false', 'Set true to allow swarm pets to not be targeted by clients.');
